--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -3,7 +3,7 @@
   font-size: $typescale-1;
   color: $gray;
   border: 1px solid currentColor;
-  padding: $spacing-1;
+  padding: rem(2) rem(2) rem(1) rem(2);
   font-weight: $font-weight-semibold;
   text-transform: uppercase;
   line-height: $line-height-solid;
